styles/styles.css
/* ... */
main .section.no-padding picture img {
  width: 100%;
}

main div.section.banner > div p,
main div.section.banner > div h3 {
  margin: 0;
  animation-delay: 0.25s;
  animation-duration: 1s;
  animation-fill-mode: both;
  animation-name: fade-in-bottom;
}

main div.section.banner > div h3 {
  width: 14vw;
  font-size: clamp(calc(var(--heading-font-size-m) * 0.5), 1.559vw + 0.596rem, var(--heading-font-size-m));
}

main .section.highlight.dark h2,
main .section.highlight.dark h3,
main .section.highlight:not(.background-image) h2,
main .section.highlight:not(.background-image) h3 {
  /* background styles, unless a background image is used. */
  color: var(--text-color-background);
}

main .section.background-image {
  box-sizing: border-box;
  position: relative;
  overflow: hidden;
  width: 100%;
  padding-bottom: unset;
}

main .section.chart-map-container.background-image {
  overflow: unset;
}

main .section.background-image > picture {
  position: absolute;
  z-index: -5;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

main .section.background-image > picture > img {
  width: 100%;
  min-height: 100%;
}

main div.section.banner picture {
  cursor: pointer;
}

main .section.background-image:not(:first-child) > picture {
  opacity: 0.5;
  top: auto;
}

main:not(.product) .section.background-image:not(:first-child) > picture {
  opacity: 1;
  top: 0;
}

main .product .section.background-image > picture img {
  width: 100%;
  min-height: 100%;
  object-fit: cover;
  box-sizing: border-box;
}

main div.section.images-border > div p.full-width img {
  width: 100%;
}

main .section.background-video .default-content-wrapper > p.picture:first-child > picture > img {
  width: calc(25vw);
  margin-bottom: 7.5vw;
}

main .section.background-video .default-content-wrapper > p.picture:nth-child(2) > picture > img {
  width: calc(5vw);
}

main div.section.images-border.image-centered .default-content-wrapper .picture > picture > img {
  margin-top: 25%;
}

main div.section.images-border.image-down .default-content-wrapper .picture > picture > img {
  margin-top: 130%;
}

main .section.background-video {
  padding: 0;
  overflow: hidden;
}

main .section.background-video:has(.default-content-wrapper) {
  margin-block-start: -1em;
}

main .section.background-video:not(:has(.default-content-wrapper)) {
  min-height: 50vw;
}

main .section.background-video .default-content-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  padding-top: 12.5%;
  padding-bottom: 12.5%;
}

main .section.background-video .default-content-wrapper h1 {
  font-style: normal;
  font-size: 4vw;
  color: var(--text-color-background);
  font-family: var(--heading-font-family);
  line-height: 4vw;
  letter-spacing: 0.125vw;
}

/* product template styling */
.product main .section.primary,
.product main .section.secondary,
.product main .section {
  width: auto;
  height: auto;
}

.product main .section.primary:has(div:only-child),
.product main .section.secondary:has(div:only-child){
  padding: var(--layout-size-l) var(--layout-size-xxl);
}

.product main .section.primary > div:only-child p.picture,
.product main .section.secondary > div:only-child  p.picture{
  margin: 0 auto;
  text-align: center;
  width: 25vw;
}

/* icon sprite styling */
svg#franklin-svg-sprite symbol {
  fill: inherit!important;
}

.icon svg use {
  fill: #fff;
}

/* border styling */

main .section .default-content-wrapper .border-0,
main .section .default-content-wrapper .border-1 {
  margin-top: -1vw;
  margin-bottom: -3.2vw;
  background-size: cover;
  background-repeat: no-repeat;
  height: 4vw;
}

main .section .default-content-wrapper .border-0 {
  transform: rotate(180deg);
}

main .section .outback .default-content-wrapper .border-0 {
  filter: drop-shadow(0 -4px 1px #00000080);
}

main .section .outback .default-content-wrapper .border-1 {
  filter: drop-shadow(0 4px 1px #00000080);
}

main .back-to-home {
  padding: 0;
  background-color: var(--nav-home-color);
  width: 3%;
  min-width: 43px;
  height: 6%;
  min-height: 43px;
  margin-top: -25px;
  text-align: center;
  position: fixed;
  left: 0;
  top: 50%;
  z-index: 256;
  border-width: 0;
  border-radius: 2px;
}

main .back-to-home div {
  position: absolute;
  top: 50%;
  width: 100%;
  height: 24px;
  transform: translateY(-50%);
}

main .back-to-home span.icon {
  fill: var(--static-color-white);
}

/* BANNER */
main div.section.banner {
  padding: var(--layout-size-l);
  transform: translateZ(0);
  animation-delay: 0.25s;
  animation-duration: 1s;
  animation-fill-mode: both;
  animation-name: background-from-right;
  background: linear-gradient(to right, var(--background-color) 50%, var(--text-secondary-color-background) 50%) left;
  background-size: 200%;
  transition: .5s ease-out;
}

main div.section.banner:hover {
  background-position: right;
}

main div.section.banner > div {
  display: flex;
  gap: 16px;
  margin-left: 32vw;
  margin-right: 32vw;
  align-items: center;
  justify-content: center;
}

main div.section.banner > div > *:nth-child(odd) {
  text-align: right;
  margin: var(--layout-size-xs) 0;
}

main div.images-border {
  padding: 24px 0 0;
  text-align: center;
  font-size: larger;
  margin-bottom: 6vw;
}

main div.images-border.images-border-bottom-margin-small {
  margin-bottom: 2vw;
}

main div.section.images-border > div p {
  position: absolute;
  margin: 0;
  transform: translateY(-80%);
  max-width: 40vw;
}

main div.people-intro div.row1-text p {
  text-align: left;
}

main div.section.images-border.image-border-medium-y > div p {
  transform: translateY(-40%);
}

main div.section.images-border > div p:not(:last-child) {
  left: 0;
}

main div.section.images-border > div p:last-child {
  right: 0;
}

main div.section.images-border > div p.full-width {
  padding-bottom: 80px;
  width: 100%;
  max-width: unset;
}
/* ... */

